--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/halsioninc/server-mui.git",
-    "directory": "packages/server-mui"
+    "url": "git+https://github.com/halsioninc/server-mui.git"
   },
   "license": "MIT",
   "bugs": {
